1st-gen/packages/menu/src/menu.css
/**
 * Copyright 2026 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

@import url("./menu-overrides.css");
@import url("./spectrum-menu.css");

:host {
  flex-direction: column;

  /**
     * Allow menu elements to be foreced to width 100% when placed inside of a Tray
     **/
  width: var(--swc-menu-width);
}

:host(:focus) {
  outline: none;
}

::slotted(*) {
  /**
     * Remove when Spectrum CSS supports this correctly
     */
  flex-shrink: 0;
}

:host([is-mobile-view]) {
  display: block;
  inline-size: 100%;
  overflow: hidden;
}

:host([is-mobile-view]) ::slotted([slot="mobile-submenu"]) {
  inline-size: 100%;
}

.mobile-slot-wrapper {
  display: contents;
}

.mobile-slot-hidden {
  display: none;
}

@keyframes mobile-slide-in-right {
  from {
    opacity: 0;
    transform: translateX(30%);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes mobile-slide-in-left {
  from {
    opacity: 0;
    transform: translateX(-30%);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

:host([mobile-transition="forward"]) {
  animation: mobile-slide-in-right 200ms ease-out;
}

:host([mobile-transition="back"]) {
  animation: mobile-slide-in-left 200ms ease-out;
}

